--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* GLOBAL */
 *,
 *::before,
 *::after {
@@ -9,13 +10,16 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -37,6 +41,16 @@ ol {
   list-style: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 /* Кастомный скроллбар */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
@@ -47,5 +61,294 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
+}
+
+/* Основа */
+.content {
+  display: grid;
+  grid-template-columns: 711px auto;
+  align-items: end;
+  column-gap: 30px;
+  width: 1140px;
+}
+
+/* Общие стили для кнопок */
+.button {
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: inherit;
+  font-size: 18px;
+  letter-spacing: 0;
+  background-color: transparent;
+}
+
+/* Основа - Заголовок "Посмотри в окно" */
+.title {
+  width: 259px;
+  height: 210px;
+  margin-bottom: 26px;
+  padding-top: 2px;
+  font-family: "Oswald", sans-serif;
+  font-size: 75px;
+  line-height: 94%;
+  letter-spacing: 0;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+/* Основа - видео */
+.result__video-container {
+  position: relative;
+  width: 100%;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Форма поиска */
+.search-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+/* Форма поиска - заголовки */
+.search-form__fieldset-title {
+  min-height: 22px;
+  margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 0;
+}
+
+/* Форма поиска - Поисковая строка */
+.search-form__textfield {
+  width: 225px;
+  min-height: 27px;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  font-size: 18px;
+  letter-spacing: 0;
+  background-color: inherit;
+  appearance: none;
+}
+
+/* Форма поиска - Чекбоксы */
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+}
+
+.search-form__pseudo-checkbox {
+  position: relative;
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+  border: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 15px;
+  height: 15px;
+  background-color: inherit;
+}
+
+/* Чекбокс - состояние checked */
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  background-color: #fff;
+}
+
+/* Форма поиска - Кнопка */
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+  height: 34px;
+}
+
+/* Основа - результаты поиска */
+.content__details {
+  width: 100%;
+}
+
+.content__list-container {
+  position: relative;
+  width: 100%;
+  height: 298px;
+  overflow-y: auto;
+}
+
+/* Результаты поиска - Кнопка "Показать еще" */
+.more-button {
+  width: calc(100% - 5px);
+  height: 34px;
+  margin: 30px 0 2px 2px;
+}
+
+/* Список карточек */
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+/* Карточка */
+.content__list-item {
+  margin: 0 3px 0 2px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+}
+
+.content__card-link {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Карточка - выбранная карточка */
+.content__card-link_current .content__video-card-description-container {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+/* Карточка - изображение видео */
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Карточка - контейнер с текстом карточки */
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 196px;
+  height: 103px;
+}
+
+/* Карточка - Заголовок карточки */
+.content__video-card-title {
+  margin-bottom: -1px;
+  overflow: hidden;
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  transform: translateY(-4px);
+}
+
+/* Карточка - основной текст карточки */
+.content__video-card-description {
+  display: -webkit-box;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  letter-spacing: 0;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  transform: translateY(-4px);
+}
+
+/* Состояния элементов - HOVER */
+/* Чекбокс - HOVER */
+.search-form__label:hover {
+  cursor: pointer;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+}
+
+/* Кнопки - HOVER */
+.button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* Карточка - HOVER */
+.content__list-item:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+
+/* Состояния элементов - ACTIVE */
+/* Поисковая строка - ACTIVE */
+.search-form__textfield:active {
+  border: 1px solid #fff;
+}
+
+/* Кнопки - ACTIVE */
+.button:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+/* Карточка - ACTIVE */
+.content__video-card-description-container:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+/* Состояния элементов - FOCUS-VISIBLE */
+/* Прим. состояние FOCUS убираем */
+/* Кнопки - FOCUS-VISIBLE */
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+/* Поисковая строка - FOCUS-VISIBLE */
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+/* Чекбокс - FOCUS-VISIBLE */
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+/* Карточка - FOCUS-VISIBLE */
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 0px;
 }
